# GBig_Emu

./: .gitignore  CMakeLists.txt  GB_emu  GB_emu_test  Makefile  README.md
include/: bus.h  cart.h  common.h  cpu.h  cpu_LD_instructions.h  debug.h  emu.h  instruction.h  io_register.h  orchestr.h  ppu.h  wram.h
lib/: bios.c  bus.c  cart.c  cpu.c  cpu_LD_instructions.c  cpu_instructions.c  cpu_others_instructions  cpu_others_instructions.c  debug.c  emu.c  incr_dcr_instructions.c  instruction.c  io_register.c  jump_rotate_instructions.c  memory_instructions.c  more_instructions.c  orchestr.c  ppu.c  timer.c  wram.c
